--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@
   background-color: #8d7979;
 }
 
+
+
+.register-container,
 .login-container {
   background-color: #333;
   color: #fff;
@@ -18,6 +21,7 @@ label {
 }
 
 input[type="text"],
+input[type="email"],
 input[type="password"] {
   padding: 10px;
   margin-bottom: 20px;
