--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,18 @@
-.App{
-  background-color: #8d7979;
+body {
+  background-color: #222;
 }
 
-
+.App {
+  background-color: #222;
+  color: #fff;
+}
 
 .register-container,
 .login-container {
-  background-color: #333;
-  color: #fff;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 10px;
   padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 form {
@@ -27,17 +31,41 @@ input[type="password"] {
   margin-bottom: 20px;
   border-radius: 5px;
   border: none;
+  background-color: rgba(255, 255, 255, 0.1);
+  color: #fff;
 }
 
 button[type="submit"] {
-  background-color: #555;
+  background-color: rgba(255, 255, 255, 0.1);
   color: #fff;
   padding: 10px;
   border-radius: 5px;
   border: none;
   cursor: pointer;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 button[type="submit"]:hover {
-  background-color: #777;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.ReactModal__Overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.get-container,
+.register-container,
+.update-container,
+.delete-container {
+  background-color: rgba(31, 30, 30, 0.1);
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
